--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -29,6 +29,16 @@ jobs:
           restore-keys: ${{ runner.os }}-maven
 
       - name: Build e Análise com SonarQube
-        run: mvn clean verify sonar:sonar -Dsonar.projectKey=blogpessoal \
-          -Dsonar.host.url=http://localhost:9000 \
-          -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+        run: mvn clean verify sonar:sonar -Dsonar.projectKey=blogpessoal -Dsonar.host.url=http://seu-servidor-sonar -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+
+  gerar-relatorios:
+    name: Geração de Relatórios
+    runs-on: ubuntu-latest
+    needs: analisar-codigo
+
+    steps:
+      - name: Checkout do código
+        uses: actions/checkout@v3
+
+      - name: Relatórios via Surefire (JUnit)
+        run: mvn surefire-report:report
