--- a/src/main/resources/sonar-project.properties
+++ b/src/main/resources/sonar-project.properties
@@ -1,13 +1,11 @@
 sonar.projectKey=blogpessoal
 sonar.projectName=Projeto-Blog-Pessoal
 sonar.projectVersion=1.0
+sonar.host.url=http://localhost:9000
+
+sonar.sourceEncoding=UTF-8
 sonar.sources=src/main/java
+
 sonar.tests=src/test/java
 sonar.java.binaries=target/classes
-sonar.java.libraries=target/*.jar
-
-sonar.language=java
-sonar.sourceEncoding=UTF-8
-
-sonar.host.url=http://localhost:9000
-sonar.login=sqa_38ea34b91a97596b33c0dd8e3fb304ae7c8aa6ae
+sonar.junit.reportPaths=target/surefire-reports
